--- a/css/styles.css
+++ b/css/styles.css
@@ -117,28 +117,50 @@ li {
     display: inline-block;
 }
 
+/* overlay */
+.overlay {
+    background-color: #3F2305;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0.2;
+    display: none;
+}
+
 /* small navbar ************************************************************************************************/
 
 #bigNav {
     display: none;
 }
 
-#smallNav {
+.logo-and-bars {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 5rem;
-}
-
-#smallNav nav {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
-#smallNav a {
+/* logo */
+.logo {
+    width: 150px;
+}
+
+#smallNav .links {
+    display: none;
+}
+
+#smallNav .links ul {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    grid-row-gap: 2rem;
+}
+
+#smallNav .links a {
     text-decoration: none;
-    width: 120px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 /* burger icon */
@@ -458,6 +480,7 @@ svg {
 /* medium devices */
 @media only screen and (min-width: 640px) {
     /* general ************************************************************************************************/
+
     body {
         font-size: 18px;
     }
@@ -526,6 +549,7 @@ svg {
     }
 
     /* home page ************************************************************************************************/
+
     #homePage h3 {
         margin-top: 0;
     }
