--- a/css/styles.css
+++ b/css/styles.css
@@ -166,10 +166,10 @@ li {
 /* burger icon */
 .fa-solid {
     cursor: pointer;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #3F2305;
     text-decoration: none;
-    padding: 0 10px;
+    padding: 0 15px 0 0;
 }
 
 .fa-solid:visited {
