Make "Skills" keyword bold.

--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,10 @@ a:active {
     padding-bottom: 0;
 }
 
+#projects span {
+    font-weight: bold;
+}
+
 /* "read more" links */
 .button {
     background-color: #F2EAD3;
