--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,7 @@ a:active {
 }
 
 #smallNav {
-    background-color: #8A783F;
-    /* background-color: #C4B37D; */
+    background-color: #8A783F; /* background-color: #C4B37D; */
     text-align: center;
     padding: 10px 0;
     box-shadow: 5px 5px 15px 3px #3F2305;
@@ -365,7 +364,7 @@ a:active {
     width: 600px;
 }
 
-#frugalityFirstProject .user-research img { 
+#frugalityFirstProject .user-research img {
     height: 500px;
     width: 700px;
 }
@@ -524,8 +523,7 @@ svg {
     /* header container */
     #bigNav {
         display: flex;
-        background-color: #8A783F;
-        /* background-color: #C4B37D; */
+        background-color: #8A783F; /* background-color: #C4B37D; */
         position: fixed;
         width: 100%;
         padding: 15px 0;
